--- a/docs/ru/index.yaml
+++ b/docs/ru/index.yaml
@@ -7,4 +7,4 @@ links:
   - title: Структура YFM на главной странице
     href: anotherpage.md
   - title: Подраздел на главной странице
-    href: sub-section/
+    href: sub-section/content.md
